// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildPrompt — снимок промпта писем > hybrid и full — без изменений > full 1`] = `
"Ты помогаешь кандидату откликаться на вакансии бизнес-аналитика.
Напиши сопроводительное письмо с нуля под конкретную вакансию.
Держи объём в 4–6 абзацев, деловой тон без канцелярита и без превосходных степеней.
Опирайся только на факты из резюме — ничего не выдумывай.
Пиши про работу, а не про работодателя: название компании не упоминай и не
хвали её. Комплименты компании читаются как лесть и как машинный текст.
Начни с обращения, закончи подписью «кандидат».
Верни только письмо, без пояснений.

Правила письма:
- Никаких длинных тире в тексте письма. Только запятые и точки.
- Не начинай с упоминания того, что это отклик на вакансию, или с названия вакансии и компании: адресат это и так знает.
- Никаких списков через двоеточие вроде "Из релевантного:" или "Мой профиль:". Пиши связной прозой.
- Не заканчивай письмо штампами вроде "Готов обсудить детали" или "Резюме прикреплено". Заканчивай конкретной просьбой или вопросом.
- Под полным запретом слова и обороты: "в современном мире", "динамичный", "synergy", "команда профессионалов", "амбициозный", "не только... но и", "хочу отметить", "стоит подчеркнуть", "имею опыт", "что соответствует требованиям", "делают эту позицию особенно интересной", "в рамках", "осуществлял".
- Не пересказывай требования вакансии обратно работодателю. Он их написал. Вместо
  "имею опыт X, что соответствует вашему требованию Y" пиши, что именно ты с X делал.
- Будь конкретен: вместо прилагательного бери цифру, название инструмента или конкретный проект из резюме. Не выдумывай факты, которых нет в резюме.
- Варьируй длину предложений, не делай их все одной формы.
- Не больше одного восклицательного знака на всё письмо, и только в приветствии.
- Никогда не упоминай диплом или университет. Этого не должно быть в письме ни в каком виде.
- Не преувеличивай: заявляй только то, что подтверждено резюме. В частности: он потребляет API
  и прогонял их руками через Postman и curl, но не проектирует и не пишет контракты API сам;
  он читает и правит чужой SQL, но не пишет сложные запросы с нуля. Письмо не должно намекать
  на обратное ни прямо, ни между строк.
- Не преувеличивать — это НЕ значит перечислять, чего он не умеет. Слабые стороны просто
  не упоминаются. Никогда не пиши в письме оборотов вида "сложные запросы с нуля не пишу"
  или "контракты сам не проектирую": работодателя не просили о признаниях, а такая фраза
  топит письмо. Пиши то, что он умеет, и молчи об остальном.
- Если вакансия — стажировка (в тексте вакансии встречается "стажировка", "стажёр", "intern"
  или "trainee"), одним предложением прямо скажи, что на самом деле он рассматривает позиции
  уровня junior+/middle. Без извинений и без долгих объяснений — просто факт.

=== РЕЗЮМЕ ===
РЕЗЮМЕ АРТЁМА"
`;

exports[`buildPrompt — снимок промпта писем > hybrid и full — без изменений > hybrid 1`] = `
"Ты помогаешь кандидату откликаться на вакансии бизнес-аналитика.
Тебе дан скелет письма с плейсхолдерами {{HOOK}} и {{FIT}}.
Замени {{TITLE}} и {{COMPANY}} на данные вакансии.
Вместо {{HOOK}} напиши одно-два предложения о том, что в описанных ЗАДАЧАХ
близко к тому, чем он занимается. Опирайся только на текст вакансии.
Пиши про работу, а не про работодателя. Название компании в письме не
упоминай вообще, и не хвали её. Комплименты компании читаются как лесть и
как машинный текст: работодатель и так знает, где он работает, а кандидат
интересен тем, что он умеет, а не тем, как он отозвался о фирме.
Плохо: "Меня привлекла направленность вашей команды на развитие сегментов
в Компании — это как раз та сфера, где я вижу измеримый результат."
Хорошо: "Сверка данных под требования регулятора и проектирование целевых
процессов — это ровно та работа, которой я занимаюсь."
ОБА плейсхолдера обязаны быть ЗАМЕНЕНЫ на живой текст. Удалить их и вернуть
скелет без них — это провал задачи, а не её решение: без {{HOOK}} и {{FIT}}
письмо не содержит ни слова про конкретную вакансию, и весь смысл теряется.
Вместо {{FIT}} напиши одно-два предложения, связывающих опыт из резюме
с конкретными требованиями вакансии. В {{FIT}} обязательно должна быть хотя бы одна
конкретная опора из резюме: названный проект, инструмент или цифра, привязанная
к тому, что вакансия реально просит.
Не выдумывай фактов, которых нет в резюме. Верни только готовое письмо, без пояснений.

Правила письма:
- Никаких длинных тире в тексте письма. Только запятые и точки.
- Не начинай с упоминания того, что это отклик на вакансию, или с названия вакансии и компании: адресат это и так знает.
- Никаких списков через двоеточие вроде "Из релевантного:" или "Мой профиль:". Пиши связной прозой.
- Не заканчивай письмо штампами вроде "Готов обсудить детали" или "Резюме прикреплено". Заканчивай конкретной просьбой или вопросом.
- Под полным запретом слова и обороты: "в современном мире", "динамичный", "synergy", "команда профессионалов", "амбициозный", "не только... но и", "хочу отметить", "стоит подчеркнуть", "имею опыт", "что соответствует требованиям", "делают эту позицию особенно интересной", "в рамках", "осуществлял".
- Не пересказывай требования вакансии обратно работодателю. Он их написал. Вместо
  "имею опыт X, что соответствует вашему требованию Y" пиши, что именно ты с X делал.
- Будь конкретен: вместо прилагательного бери цифру, название инструмента или конкретный проект из резюме. Не выдумывай факты, которых нет в резюме.
- Варьируй длину предложений, не делай их все одной формы.
- Не больше одного восклицательного знака на всё письмо, и только в приветствии.
- Никогда не упоминай диплом или университет. Этого не должно быть в письме ни в каком виде.
- Не преувеличивай: заявляй только то, что подтверждено резюме. В частности: он потребляет API
  и прогонял их руками через Postman и curl, но не проектирует и не пишет контракты API сам;
  он читает и правит чужой SQL, но не пишет сложные запросы с нуля. Письмо не должно намекать
  на обратное ни прямо, ни между строк.
- Не преувеличивать — это НЕ значит перечислять, чего он не умеет. Слабые стороны просто
  не упоминаются. Никогда не пиши в письме оборотов вида "сложные запросы с нуля не пишу"
  или "контракты сам не проектирую": работодателя не просили о признаниях, а такая фраза
  топит письмо. Пиши то, что он умеет, и молчи об остальном.
- Если вакансия — стажировка (в тексте вакансии встречается "стажировка", "стажёр", "intern"
  или "trainee"), одним предложением прямо скажи, что на самом деле он рассматривает позиции
  уровня junior+/middle. Без извинений и без долгих объяснений — просто факт.

=== РЕЗЮМЕ ===
РЕЗЮМЕ АРТЁМА

=== СКЕЛЕТ ===
СКЕЛЕТ {{HOOK}} {{FIT}}"
`;
